@@ -29,17 +29,17 @@ class PDF::DAO::Stream
 
     has $.encoded;
     has $.decoded;
+
     submethod TWEAK {
         self<Length> = .codes with $!encoded;
     }
-
+ 
     method encoded is rw {
 	Proxy.new(
 	    FETCH => sub ($) {
 		$!encoded //= self.encode( $_ )
 		    with $!decoded;
-
-		self<Length> = .codes with $!encoded;
+		self<Length> //= .codes with $!encoded;
 		$!encoded;
 	    },
 
